fix: 4th perk css on small screens

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -4586,6 +4586,11 @@ span.ui-stats-header-value {
     right: 30px;
   }
 
+
+  #ui-perk-3 {
+    right: 60px;
+  }
+
   /**
    * ui-bottom-center-right
    */
